Flush out node templates and watch cmds

--- a/server-nodeexpress/templates/home.hbs
+++ b/server-nodeexpress/templates/home.hbs
@@ -1,6 +1,12 @@
 {{#*inline "content"}}
+
     <h1>{{title}}</h1>
-    <p class="test">Home page</p>
+    
+    <p class="test">Home page 3</p>
+
+    <button id="test-btn">Test</button>
+    
+
 {{/inline}}
 
 {{> tpl-master}}
