Flush out authentication flow

--- a/server-nodeexpress/templates/layout/_navbar.hbs
+++ b/server-nodeexpress/templates/layout/_navbar.hbs
@@ -14,9 +14,11 @@
   <form class="form-inline pull-xs-right">
     
     <div class="auth hidden">
-      <div id="sign-in-status"></div>
-      <div id="sign-in"></div>
-      <div id="account-details"></div>
+      {{!--<div id="sign-in-status"></div>--}}
+      {{!--<div id="sign-in"></div>--}}
+      {{!--<div id="account-details"></div>--}}
+      <span class="username"></span>
+      <button class="btn btn-outline-success logout-btn" type="submit">Logout</button>
     </div>
     
     <div class="noauth hidden">
