--- a/server-nodeexpress/templates/home.hbs
+++ b/server-nodeexpress/templates/home.hbs
@@ -1,10 +1,11 @@
 {{#*inline "content"}}
 
-    <h1>{{title}}</h1>
+    <h4>{{title}}</h4>
     
-    <p class="test">Home page 4</p>
+    <p class="test">Current Votes</p>
 
-    <button id="test-btn">Test</button>
+    <button class="btn btn-primary" id="test-btn">Archive</button>
+    <button class="btn" id="test-btn">Delete</button>
 
 
 
