--- a/server-nodeexpress/templates/layout/_master.hbs
+++ b/server-nodeexpress/templates/layout/_master.hbs
@@ -14,9 +14,10 @@
 {{/header}}
 
 <body>
-  <div class="container">
+  {{> layout/_navbar}}
 
-    {{> layout/_navbar}}
+  <div class="container-fluid">
+
 
     {{#> content}} this is in tpl-master {{/content}}
     
@@ -26,7 +27,7 @@
       {{> auth/_auth-modal}}
 
       <footer>
-        <span>Powered by Handlebars</span>
+        {{!--<span>Powered by Handlebars</span>--}}
       </footer>
 
     {{/footer}}
@@ -36,7 +37,8 @@
   <!-- jQuery first, then Tether, then Bootstrap JS. -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="sha384-VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+
 
   <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
   <script src="https://www.gstatic.com/firebasejs/ui/live/0.5/firebase-ui-auth.js"></script>
