--- a/server-nodeexpress/templates/layout/_navbar.hbs
+++ b/server-nodeexpress/templates/layout/_navbar.hbs
@@ -1,30 +1,52 @@
-<nav class="navbar navbar-dark bg-inverse">
-  {{!--<a class="navbar-brand" href="#">Prototype</a>--}}
-  <ul class="nav navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Features</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">About</a>
-    </li>
-  </ul>
-  <form class="form-inline pull-xs-right">
-    
-    <div class="auth hidden">
-      {{!--<div id="sign-in-status"></div>--}}
-      {{!--<div id="sign-in"></div>--}}
-      {{!--<div id="account-details"></div>--}}
-      <span class="username"></span>
-      <button class="btn btn-outline-success logout-btn" type="submit">Logout</button>
-    </div>
-    
-    <div class="noauth hidden">
-      <button class="btn btn-outline-success login-btn" type="submit">Login</button>
-    </div>
-    
-  </form>
+<nav class="navbar navbar-dark bg-inverse navbar-full">
+
+  <a class="navbar-brand" href="#">
+    <img src="/static/i/iconmonstr-layer-21.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+    Chimney <small> - My Group Name</small>
+  </a>
+
+  <button class="navbar-toggler collapsed hidden-sm-up float-xs-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
+  <div class="collapse navbar-toggleable-xs" id="navbarCollapse">
   
+    <ul class="nav navbar-nav">
+      {{!--<li class="nav-item active">--}}
+      {{!--  <a class="nav-link" href="#">Projects <span class="sr-only">(current)</span></a>--}}
+      {{!--</li>--}}
+      {{!--<li class="nav-item">--}}
+      {{!--  <a class="nav-link" href="#">Features</a>--}}
+      {{!--</li>--}}
+      <li class="nav-item float-xs-right">
+    <form class="form-inline">
+  
+      <div class="auth hidden">
+        <span class="username hidden"></span>
+        <button class="btn btn-sm btn-outline-success logout-btn" type="submit" alt="test">Logout</button>
+      </div>
+      
+      <div class="noauth hidden">
+        <button class="btn btn-sm btn-outline-success login-btn" type="submit">Login</button>
+      </div>
+      
+    </form>
+
+      </li>
+    </ul>
+  
+    
+  </div>  
+
+</nav>
+
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;"">
+    <ul class="nav navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Topic</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Archive</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Members</a>
+      </li>      
+    </ul>      
 </nav>
